--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -11,8 +11,12 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.format_sql=true
 
 #hibernate logging
 logging.level.org.hibernate=info
 logging.level.root=info
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+# live rebuild
+#spring.mustache.cache=false
