--- a/front_end/client/package.json
+++ b/front_end/client/package.json
@@ -38,7 +38,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "linebreak-style": ["error", "windows"]
+    }
   },
   "browserslist": [
     "> 1%",
