--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/knowthyself?autoReconnect=tr
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
+server.port=7070
 
 #JPA Setting
 spring.jpa.hibernate.ddl-auto=create-drop
